--- a/Pré_processamento.ipynb
+++ b/Pré_processamento.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOo3hVaI5hWZfu67UzHeqiE",
+      "authorship_tag": "ABX9TyOFt+xGAh9sfjpyU3CThVzo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,49 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Programa em python para ler um arquivo separar os atributos da classe. Se os atributos forem nominais aplicar codificação one-hot. E se a classe para nominal substituir cada item da classe por números sequenciais (começando por 0). Depois ler o arquivo e verificar se há atributos vazios ou nulos. Se tiver substitua pela média. Gravar o resultado num arquivo .csv"
+        "### Módulo de Pré-Processamento de Dados\n",
+        "\n",
+        "Este módulo do programa é responsável pelo **pré-processamento de dados**, uma etapa essencial para preparar conjuntos de dados brutos para análise ou modelagem em tarefas de aprendizado de máquina. O pré-processamento inclui a leitura, limpeza e transformação dos dados, garantindo que estejam em um formato adequado para uso em algoritmos de machine learning. A seguir, descrevemos as funcionalidades principais deste módulo:\n",
+        "\n",
+        "#### 1. Leitura e Separação dos Atributos e Classe\n",
+        "O módulo começa lendo um arquivo de dados, que pode estar em formato CSV ou outro formato tabular. Em seguida, ele separa os **atributos** (features) da **classe** (target). Essa separação é fundamental, pois os atributos são as variáveis independentes usadas para prever a classe, que é a variável dependente ou alvo.\n",
+        "\n",
+        "#### 2. Codificação de Atributos Nominais\n",
+        "Se os atributos forem **nominais** (categóricos não ordenados), o módulo aplica a técnica de **codificação one-hot**. Essa técnica transforma cada categoria nominal em um vetor binário, onde apenas um bit é \"1\" (ativo) e os demais são \"0\". Por exemplo, se um atributo \"Cor\" tiver as categorias \"Vermelho\", \"Verde\" e \"Azul\", a codificação one-hot criará três novas colunas binárias, uma para cada cor. Essa abordagem é necessária porque a maioria dos algoritmos de machine learning não consegue trabalhar diretamente com dados categóricos.\n",
+        "\n",
+        "#### 3. Codificação da Classe Nominal\n",
+        "Se a classe for nominal, o módulo substitui cada item da classe por **números sequenciais**, começando por 0. Por exemplo, se a classe for \"Tipo\" com categorias \"A\", \"B\" e \"C\", ela será transformada em 0, 1 e 2, respectivamente. Essa codificação é comum em problemas de classificação, onde a classe precisa ser representada numericamente.\n",
+        "\n",
+        "#### 4. Tratamento de Valores Vazios ou Nulos\n",
+        "O módulo verifica a presença de valores **vazios** ou **nulos** nos atributos. Se forem encontrados, ele substitui esses valores pela **média** dos valores existentes na respectiva coluna. Essa abordagem é amplamente utilizada para lidar com dados faltantes, garantindo que o conjunto de dados permaneça completo e adequado para análise. A média é calculada apenas para atributos numéricos, enquanto para atributos categóricos, pode-se utilizar a moda (valor mais frequente).\n",
+        "\n",
+        "#### 5. Gravação do Resultado em Arquivo CSV\n",
+        "Após o pré-processamento, o módulo grava o conjunto de dados transformado em um novo arquivo **.csv**. Esse arquivo contém os dados limpos, codificados e prontos para uso em etapas subsequentes, como treinamento de modelos de machine learning. A gravação em formato CSV garante compatibilidade com a maioria das ferramentas e bibliotecas de análise de dados.\n",
+        "\n",
+        "### Exemplo de Funcionamento\n",
+        "Suponha um arquivo de entrada com os seguintes dados:\n",
+        "\n",
+        "| Idade | Cor    | Salário | Classe |\n",
+        "|-------|--------|---------|--------|\n",
+        "| 25    | Vermelho | 50000   | A      |\n",
+        "| 30    | Verde  |         | B      |\n",
+        "| 35    | Azul   | 70000   | A      |\n",
+        "\n",
+        "Após o pré-processamento, o arquivo de saída seria:\n",
+        "\n",
+        "| Idade | Cor_Vermelho | Cor_Verde | Cor_Azul | Salário | Classe |\n",
+        "|-------|--------------|-----------|----------|---------|--------|\n",
+        "| 25    | 1            | 0         | 0        | 50000   | 0      |\n",
+        "| 30    | 0            | 1         | 0        | 60000   | 1      |\n",
+        "| 35    | 0            | 0         | 1        | 70000   | 0      |\n",
+        "\n",
+        "Neste exemplo:\n",
+        "- O atributo \"Cor\" foi codificado usando one-hot.\n",
+        "- O valor faltante em \"Salário\" foi substituído pela média (60000).\n",
+        "- A classe \"Classe\" foi codificada numericamente (A = 0, B = 1).\n",
+        "\n",
+        "### Conclusão\n",
+        "Este módulo de pré-processamento é uma ferramenta essencial para garantir a qualidade e a consistência dos dados antes de sua utilização em modelos de machine learning. Ele automatiza tarefas como codificação de atributos categóricos, tratamento de valores faltantes e gravação de dados processados, economizando tempo e reduzindo erros manuais. Ao padronizar o pré-processamento, o módulo contribui para a criação de pipelines de dados mais robustos e eficientes, facilitando a aplicação de técnicas avançadas de análise e modelagem."
       ],
       "metadata": {
         "id": "CGCYtL9fgGst"
